add empty check (#54)
* add empty check

* full fix

* query fixes, make compliant with scorpio query format

* fix commit issue

* fix again

* fix the tests

* clean

* fix cleanup